--- a/ToDoListProj/appsettings.json
+++ b/ToDoListProj/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-993SLA0;Initial Catalog=ToDoListDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "DefaultConnection": "Data Source=ToDoListDatabase.db",
     "Redis": "localhost:6379"
   },
   "EmailSettings": {
