--- a/ToDoListProj/appsettings.json
+++ b/ToDoListProj/appsettings.json
@@ -7,12 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ToDoListDatabase.db",
+    "DefaultConnection": "Data Source=app.db",
     "Redis": "localhost:6379"
   },
   "EmailSettings": {
     "FromMail": "todolisttodolist43@gmail.com",
     "FromPassword": "gzrolgsmvosxowfw"
-   
   }
 }
