--- a/ToDoListProj/appsettings.json
+++ b/ToDoListProj/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ToDoListM.db",
+    "DefaultConnection": "Data Source=ToDoListMaks.db",
     "Redis": "localhost:6379"
   },
   "EmailSettings": {
